# vk_reconstruction

./: .gitignore  README.md
Code/: CMakeLists.txt  application.cpp  application.h  main.cpp  ptr.h  stdHeader.h
Code/assets/: Gun.staticmesh  Sphere.rhsm
Code/factories/: CMakeLists.txt  renderPassFactory.cpp  renderPassFactory.h
Code/platform/: CMakeLists.txt  inputTypes.h  window.cpp  window.h
Code/renderer/: CMakeLists.txt  Camera.cpp  Camera.h  HDRITools.cpp  HDRITools.h  material.cpp  material.h  model.cpp  model.h  offscreenRenderTarget.cpp  offscreenRenderTarget.h  pipelineFactory.cpp  pipelineFactory.h  pushConstantManager.cpp  pushConstantManager.h  renderNode.cpp  renderNode.h  render_common.h  scene.cpp  scene.h  tiny_obj_loader.h  uniformManager.cpp  uniformManager.h
Code/shaders/: CaptureDiffuseIrradiance.frag  CaptureDiffuseIrradianceFrag.spv  CaptureSpecularPrefilter.frag  CaptureSpecularPrefilterFrag.spv  HDRI2Cubemap.frag  HDRI2Cubemap.vert  HDRI2CubemapFrag.spv  HDRI2CubemapVert.spv  SkyBoxFrag.spv  Skybox.frag  compile.bat  fs.spv  full_screen_triangle.spv  full_screen_triangle.vert  generateBRDF.frag  generateBRDFFrag.spv  lessonShader.frag  lessonShader.vert  pbr1.frag  pbr1.vert  pbr1Frag.spv  pbr1Vert.spv  screen_quad.frag  screen_quad.spv  test.frag  test.vert  testFs.spv  testVs.spv  vs.spv
Code/vulkancore/: CMakeLists.txt  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  constantRange.cpp  constantRange.h  dataBuffer.cpp  dataBuffer.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  device.cpp  (+27 more)
